Fix crash when sorting selected images newest first

If the display order is newest first, selecting all images and sorting
the selected images resulted in a out of bounds iterator.

BUG: 476651